--- a/src/app/components/administrar-restricciones/administrar-restricciones.component.css
+++ b/src/app/components/administrar-restricciones/administrar-restricciones.component.css
@@ -1,5 +1,4 @@
 .container{
-    margin-top: 5%;
     color: #053667;
 }
 
@@ -13,4 +12,13 @@
 
 .table{
     color: #053667;
+}
+
+.table tr:hover {
+    background-color: azure;
+    cursor: pointer;
+}
+
+.table i:hover{
+    opacity: .3;
 }
