--- a/src/app/components/administrar-personas/administrar-personas.component.css
+++ b/src/app/components/administrar-personas/administrar-personas.component.css
@@ -1,5 +1,4 @@
 .container{
-    margin-top: 5%;
     color: #053667;
 }
 
@@ -14,3 +13,14 @@
 .table{
     color: #053667;
 }
+
+.table tr:hover {
+    background-color: azure;
+    cursor: pointer;
+}
+
+.table i:hover{
+    opacity: .3;
+}
+
+
