--- a/src/app/components/administrar-usuarios/administrar-usuarios.component.css
+++ b/src/app/components/administrar-usuarios/administrar-usuarios.component.css
@@ -1,5 +1,4 @@
 .container{
-    margin-top: 5%;
     color: #053667;
 }
 
@@ -19,7 +18,11 @@
     margin-top: 15px;
 }
 
-table tr:hover {
+.table tr:hover {
     background-color: azure;
     cursor: pointer;
+}
+
+.table i:hover{
+    opacity: .3;
 }
