--- a/src/app/components/incidencias/incidencias.component.html
+++ b/src/app/components/incidencias/incidencias.component.html
@@ -3,7 +3,7 @@
         <div class="col">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand">Restricción: </a>
-                <a></a>
+                <a id="restriccionSeleccionada"></a>
                 <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav mr-auto">
                     </ul>
