--- a/src/app/components/restricciones/restricciones.component.css
+++ b/src/app/components/restricciones/restricciones.component.css
@@ -10,6 +10,11 @@
     height: 100%;
 }
 
+.table tr:hover {
+    background-color: azure;
+    cursor: pointer;
+}
+
 .map{
     float: left;
     width: 70%;
