--- a/src/app/components/restricciones/restricciones.component.html
+++ b/src/app/components/restricciones/restricciones.component.html
@@ -1,14 +1,15 @@
 <div class="general">
     <div class="lista-restricciones">
-        <table class="table table-hover">
-            <thead>
+        <table class="table table-striped">
+            <thead class="thead-dark">
                 <tr>
                     <th scope="col">Victimario</th>
                     <th scope="col">Damnificada</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let restriccion of restriccionService.restricciones" class="table-active">
+                <tr *ngFor="let restriccion of restriccionService.restricciones"
+                    (click)=seleccionarRestriccion(restriccion)>
                     <td>{{restriccion.victimario.apellido}}</td>
                     <td>{{restriccion.damnificada.apellido}}</td>
                 </tr>
