--- a/src/app/components/administrar-restricciones/administrar-restricciones.component.html
+++ b/src/app/components/administrar-restricciones/administrar-restricciones.component.html
@@ -63,7 +63,7 @@
                                 <input class="form-control" placeholder="Fecha (Año-Mes-Día)" name="dp"
                                     [(ngModel)]="restriccion.fechaSentencia" ngbDatepicker #d="ngbDatepicker"
                                     ngbTooltip="Fecha de sentencia" 
-                                    [minDate]="{year: 1900, month: 1, day: 1}" [maxDate]="maxDatePicker" required>
+                                    [minDate]="{year: 1900, month: 1, day: 1}" [maxDate]="maxDatePicker" readonly required>
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                         type="button">
