--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -16,6 +16,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="pruebasDeVida">Pruebas de vida</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="rutinas">Rutina</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
           aria-expanded="false">Administrar</a>
