--- a/src/app/components/notificaciones/notificaciones.component.html
+++ b/src/app/components/notificaciones/notificaciones.component.html
@@ -13,39 +13,32 @@
 
     <ng-template #content let-c="close" let-d="dismiss">
         <div class="modal-header">
-            <h4 class="modal-title" id="modal-basic-title">Titulo</h4>
+            <h4 class="modal-title" id="modal-basic-title">{{notificacionSeleccionada.asunto}}</h4>
             <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
         <div class="modal-body">
-            <p>Descripción</p>
+            <p>{{notificacionSeleccionada.descripcion}}</p>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Archivar</button>
+            <p>Fecha: {{notificacionSeleccionada.fecha}}</p>
+            <button type="button" class="btn btn-outline-dark" *ngIf="notificacionSeleccionada.estado!='Archivada'"
+                (click)="archivar()">Archivar</button>
+            
         </div>
     </ng-template>
 
-    <div class="card border-primary mb-2">
-        <div class="card-header">
-            Titulo
-        </div>
-        <div class="card-body">
-            Asunto
-            <button class="btn btn-primary" (click)="open(content)">Ver</button>
-        </div>
-    </div>
-
     <div class="card border-primary mb-2" *ngFor="let notificacion of notificaciones">
         <div class="card-header">
-            <i *ngIf="notificacion.estado==NoVista" class="large material-icons">visibility_off</i>
-            <i *ngIf="notificacion.estado==Vista" class="large material-icons">visibility</i>
-            <i *ngIf="notificacion.estado==Archivada" class="large material-icons">check_circle</i>
-            {{notificacion.fecha}}
+            <i *ngIf="notificacion.estado=='NoVista'" class="large material-icons">visibility_off</i>
+            <i *ngIf="notificacion.estado=='Vista'" class="large material-icons">visibility</i>
+            <i *ngIf="notificacion.estado=='Archivada'" class="large material-icons">check_circle</i>
+            {{notificacion.asunto}}
         </div>
         <div class="card-body">
-            {{notificacion.asunto}}
-            <button class="btn btn-primary" (click)="open(content)">Ver</button>
+            {{notificacion.descripcion}}
+            <button class="btn btn-primary" (click)="open(content, notificacion)">Ver</button>
         </div>
     </div>
 </div>
