--- a/src/app/components/rutinas/rutinas.component.html
+++ b/src/app/components/rutinas/rutinas.component.html
@@ -21,9 +21,10 @@
                                     </option>
                                 </select>
                                 <a>:</a>
-                                <select class="form-control" name="dia" ngbTooltip="Minutos">
-                                    <option>2
-                                    </option>
+                                <select class="form-control" name="minutos" ngbTooltip="Minutos">
+                                        <option *ngFor="let minuto of minutos">
+                                                {{minuto}}
+                                        </option>
                                 </select>
                             </div>
                         </div>
@@ -35,7 +36,6 @@
             </div>
         </div>
     </div>
-    <div class="map">
-
+    <div id="map" class="map">
     </div>
 </div>
