--- a/src/app/components/rutinas/rutinas.component.html
+++ b/src/app/components/rutinas/rutinas.component.html
@@ -3,11 +3,13 @@
         <div class="col-10">
             <div class="card bg-light mb-3">
                 <div class="card-body">
-                    <legend>Victimario</legend>
+                    <legend>{{victimarioSeleccionado}}</legend>
                     <form>
                         <div class="row">
+                            <h5>Dia</h5>
                             <div class="form-group btn-block">
-                                <select class="form-control" name="dia" ngbTooltip="Día de rutina">
+                                <select class="form-control" name="dia" ngbTooltip="Día de rutina"
+                                    [(ngModel)]="diaSeleccionado">
                                     <option *ngFor="let dia of dias">
                                         {{dia}}
                                     </option>
@@ -15,21 +17,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="input-group">
-                                <select class="form-control" name="dia" ngbTooltip="Hora">
-                                    <option>1
-                                    </option>
-                                </select>
-                                <a>:</a>
-                                <select class="form-control" name="minutos" ngbTooltip="Minutos">
-                                        <option *ngFor="let minuto of minutos">
-                                                {{minuto}}
-                                        </option>
-                                </select>
-                            </div>
+                            <h5>Horario</h5>
+                            <ngb-timepicker ngbTooltip="Horario de rutina" [(ngModel)]="time" name="horario"
+                                [hourStep]="1" [minuteStep]="30" readonlyInputs="true"></ngb-timepicker>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-primary btn-block">ver</button>
+                            <button class="btn btn-primary btn-block" (click)=mostrarRutina(minutos)
+                                [disabled]="!seleccioneRestriccion">Ver ubicación rutinaria</button>
                         </div>
                     </form>
                 </div>
