--- a/src/styles.css
+++ b/src/styles.css
@@ -5290,6 +5290,11 @@
    padding-left: 0.6em;
    border-radius: 10rem;
  }
+
+ .badge-notif{
+  vertical-align:middle;
+  margin-top: -15px;
+}
  
  .badge-primary {
    color: #fff;
