centrado de reloj rutina

--- a/src/app/components/rutinas/rutinas.component.html
+++ b/src/app/components/rutinas/rutinas.component.html
@@ -3,10 +3,10 @@
         <div class="col-10">
             <div class="card bg-light mb-3">
                 <div class="card-body">
+                    <legend>Rutina</legend>
                     <legend>{{victimarioSeleccionado}}</legend>
                     <form>
                         <div class="row">
-                            <h5>Dia</h5>
                             <div class="form-group btn-block">
                                 <select class="form-control" name="dia" ngbTooltip="Día de rutina"
                                     [(ngModel)]="diaSeleccionado">
@@ -17,14 +17,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <h5>Horario</h5>
                             <ngb-timepicker ngbTooltip="Horario de rutina" [(ngModel)]="time" name="horario"
-                                [hourStep]="1" [minuteStep]="30" readonlyInputs="true"></ngb-timepicker>
+                                [hourStep]="1" [minuteStep]="30" readonlyInputs="true" class="reloj"></ngb-timepicker>
                         </div>
-                        <div class="card-footer">
-                            <button class="btn btn-primary btn-block" (click)=mostrarRutina(minutos)
-                                [disabled]="!seleccioneRestriccion">Ver ubicación rutinaria</button>
-                        </div>
+                        <button class="btn btn-primary btn-block" (click)=mostrarRutina(minutos)
+                            [disabled]="!seleccioneRestriccion">Ver área rutinaria</button>
                     </form>
                 </div>
             </div>
