--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -1,1 +1,36 @@
-<p>pruebas-de-vida works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card bg-light mb-3" style="max-width: 20rem;">
+                <div class="card-body" text-center>
+                    <legend>Generar prueba de vida</legend>
+                    <form #pruebaDeVidaForm="ngForm" (ngSubmit)="enviarPruebaDeVida(pruebaDeVidaForm)">
+                        <div class="form.group">
+                            <input type="text" class="form-control" placeholder="Descripción" name="descripcion"
+                                #descripcion="ngModel" [(ngModel)]="pruebaDeVida.descripcion">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-8">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Descripción</th>
+                        <th scope="col">Estado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+        </div>
+
+    </div>
+
+</div>
