Agregar y mostrar info Prueva de vida

--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -26,6 +26,11 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr *ngFor="let pruebaDeVida of pruebasDeVida">
+                        <td>{{pruebaDeVida.fecha}}</td>
+                        <td>{{pruebaDeVida.descripcion}}</td>
+                        <td>{{pruebaDeVida.estado}}</td>
+                    </tr>
                 </tbody>
             </table>
 
