--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.css
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.css
@@ -25,3 +25,20 @@
 .table i:hover{
     opacity: .3;
 }
+
+.modal-body{
+    text-align: center;
+}
+
+.modal-footer{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
