--- a/src/app/components/restricciones/restricciones.component.html
+++ b/src/app/components/restricciones/restricciones.component.html
@@ -1,4 +1,5 @@
 <div class="general">
+    <ngx-spinner type="ball-clip-rotate" size="medium"></ngx-spinner>
     <div class="lista-restricciones">
         <table class="table table-striped">
             <thead class="thead-dark">
