--- a/src/app/components/incidencias/incidencias.component.html
+++ b/src/app/components/incidencias/incidencias.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <ngx-spinner type="ball-clip-rotate" size="medium"></ngx-spinner>
     <div class="row">
         <div class="col">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,8 +34,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let incidencia of incidencias"
-                        (click)="seleccionarIncidencia(incidencia)">
+                    <tr *ngFor="let incidencia of incidencias" (click)="seleccionarIncidencia(incidencia)">
                         <td>{{incidencia.topico}}</td>
                         <td>{{incidencia.fecha}}</td>
                         <td>{{incidencia.descripcion}}</td>
