--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.css
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.css
@@ -42,3 +42,9 @@ img {
     margin-right: auto;
     width: 100%;
 }
+
+.spinner-grow{
+    position: fixed;
+    margin-top: 20%;
+    z-index: 9999;
+}
