--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <ngx-spinner type="ball-pulse-sync" size="medium"></ngx-spinner>
     <div class="col-4 mx-auto">
         <div class="card border-primary mb-3 text-center">
             <div class="card-header">
