foto prueba vida

--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-6">
                     <legend>Prueba de vida</legend>
-                    <img src="https://media.istockphoto.com/vectors/man-face-pop-art-cartoon-vector-id892379546" alt="">
+                    <img [src]="imgString" alt="">
                 </div>
             </div>
         </div>
