optimizacion restricciones y GUI notificaciones

--- a/src/app/components/incidencias/incidencias.component.html
+++ b/src/app/components/incidencias/incidencias.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-    <ngx-spinner type="ball-clip-rotate" size="medium"></ngx-spinner>
+    <ngx-spinner type="ball-clip-rotate" size="medium" bdColor="rgba(51,51,51,0.3)"
+    color="#26294D">
+        <p style="font-size: 15px; font-weight: bold; color: #26294D">Cargando...</p>
+    </ngx-spinner>
     <div class="row">
         <div class="col">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
