--- a/src/app/components/notificaciones/notificaciones.component.css
+++ b/src/app/components/notificaciones/notificaciones.component.css
@@ -1,10 +1,13 @@
+.container{
+    color: #26294D;
+}
+
 .card:hover{
-    opacity: .9;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card-header i{
     position: absolute;
-    left: 95%;
 }
 
 .card-header a{
@@ -19,4 +22,23 @@
 
 .btn{
     float: right;
+}
+
+.texto{
+    font-weight: bold;
+    text-overflow:ellipsis;
+    white-space:nowrap; 
+    overflow:hidden; 
+}
+
+.col{
+    text-overflow:ellipsis;
+    white-space:nowrap; 
+    overflow:hidden; 
+}
+
+.col-4{
+    text-overflow:ellipsis;
+    white-space:nowrap; 
+    overflow:hidden; 
 }
