--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+    <ngx-spinner type="ball-clip-rotate" size="medium" bdColor="rgba(51,51,51,0.3)" color="#26294D">
+        <p style="font-size: 15px; font-weight: bold; color: #26294D">Cargando...</p>
+    </ngx-spinner>
+
     <ng-template #content let-c="close" let-d="dismiss">
         <div class="modal-header">
             <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
@@ -43,7 +47,8 @@
                                 #descripcion="ngModel" [(ngModel)]="pruebaDeVida.descripcion" required>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary btn-block" [disabled]="!pruebaDeVidaForm.valid">Enviar</button>
+                            <button class="btn btn-primary btn-block"
+                                [disabled]="!pruebaDeVidaForm.valid">Enviar</button>
                         </div>
                     </form>
                 </div>
