--- a/src/app/components/restricciones/restricciones.component.html
+++ b/src/app/components/restricciones/restricciones.component.html
@@ -1,5 +1,8 @@
 <div class="general">
-    <ngx-spinner type="ball-clip-rotate" size="medium"></ngx-spinner>
+    <ngx-spinner type="ball-clip-rotate" size="medium" bdColor="rgba(51,51,51,0.3)"
+    color="#26294D">
+        <p style="font-size: 15px; font-weight: bold; color: #26294D">Cargando...</p>
+    </ngx-spinner>
     <div class="lista-restricciones">
         <table class="table table-striped">
             <thead class="thead-dark">
