--- a/src/app/components/notificaciones/notificaciones.component.html
+++ b/src/app/components/notificaciones/notificaciones.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <ngx-spinner type="ball-clip-rotate" size="medium"></ngx-spinner>
+    <ngx-spinner type="ball-clip-rotate" size="medium" bdColor="rgba(51,51,51,0.3)" color="#26294D">
+        <p style="font-size: 15px; font-weight: bold; color: #26294D">Cargando...</p>
+    </ngx-spinner>
 
     <div class="row">
         <div class="archivadas">
@@ -31,16 +33,40 @@
         </div>
     </ng-template>
 
-    <div class="card border-primary mb-2" *ngFor="let notificacion of notificaciones">
-        <div class="card-header">
-            <i *ngIf="notificacion.estado=='NoVista'" class="large material-icons">visibility_off</i>
-            <i *ngIf="notificacion.estado=='Vista'" class="large material-icons">visibility</i>
-            <i *ngIf="notificacion.estado=='Archivada'" class="large material-icons">check_circle</i>
-            {{notificacion.asunto}}
+    <div class="card" *ngFor="let notificacion of notificaciones" (click)="open(content, notificacion)">
+        <div class="card-header" *ngIf="notificacion.estado=='NoVista'">
+            <div class="row">
+                <div class="col-4">
+                    <div class="texto">{{notificacion.asunto}}</div>
+                </div>
+                <div class="col">
+                    <div class="texto">{{notificacion.descripcion}}</div>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-            {{notificacion.descripcion}}
-            <button class="btn btn-primary" (click)="open(content, notificacion)">Ver</button>
+        <div class="card-header" *ngIf="notificacion.estado=='Vista'" style="opacity: 0.5;">
+            <div class="row">
+                <div class="col-4">
+                    {{notificacion.asunto}}
+                </div>
+                <div class="col">
+                    {{notificacion.descripcion}}
+                </div>
+            </div>
+        </div>
+        <div class="card-header" *ngIf="notificacion.estado=='Archivada'">
+            <div class="row">
+                <div class="col-4">
+                    <div class="texto">{{notificacion.asunto}}</div>
+                </div>
+                <div class="col">
+                    <div class="texto">{{notificacion.descripcion}}</div>
+                </div>
+                <div class="col-1">
+                    <i *ngIf="notificacion.estado=='Archivada'" class="large material-icons">check_circle</i>
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
