--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <ngx-spinner type="ball-pulse-sync" size="medium"></ngx-spinner>
+    <ngx-spinner type="ball-pulse-sync" size="medium" bdColor="rgba(51,51,51,0.5)">
+        <p style="font-size: 15px; font-weight: bold; color: white">Iniciando sesión...</p>
+    </ngx-spinner>
     <div class="col-4 mx-auto">
         <div class="card border-primary mb-3 text-center">
             <div class="card-header">
