--- a/src/app/components/administrar-personas/administrar-personas.component.html
+++ b/src/app/components/administrar-personas/administrar-personas.component.html
@@ -63,8 +63,8 @@
                             <div class="input-group">
                                 <input class="form-control" placeholder="Fecha nacimiento (Año-Mes-Día)"
                                     name="fechaNacimiento" [(ngModel)]="personaDTOSelleccionada.persona.fechaNacimiento"
-                                    ngbDatepicker [minDate]="{year: 1900, month: 1, day: 1}" [maxDate]="maxDatePicker" #d="ngbDatepicker" ngbTooltip="Fecha nacimiento" 
-                                    required readonly>
+                                    ngbDatepicker [minDate]="{year: 1900, month: 1, day: 1}" [maxDate]="maxDatePicker"
+                                    #d="ngbDatepicker" ngbTooltip="Fecha nacimiento" required readonly>
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                                         type="button">
@@ -145,7 +145,8 @@
                             <div class="custom-file">
                                 <input type="file" class="custom-file-input" id="customFile" name="imagen"
                                     (change)="archivoSeleccionado($event)" accept="image/*" required>
-                                <label class="custom-file-label" id="labelImagen" for="customFile">Seleccionar imagen</label>
+                                <label class="custom-file-label" id="labelImagen" for="customFile">Seleccionar
+                                    imagen</label>
                             </div>
                         </div>
                         <br>
@@ -158,6 +159,12 @@
         </div>
         <!-- TABLA DE PERSONAS -->
         <div class="col">
+            <div class="text-center">
+                <div class="spinner-grow" *ngIf="spinnerBoolean" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
