--- a/src/app/components/notificaciones/notificaciones.component.html
+++ b/src/app/components/notificaciones/notificaciones.component.html
@@ -69,4 +69,7 @@
             </div>
         </div>
     </div>
+    <div class="text-center">
+        <a class="cargarMas" (click)="cargarMas()">Cargar más ...</a>
+    </div>
 </div>
