--- a/src/app/components/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/components/administrar-usuarios/administrar-usuarios.component.html
@@ -1,6 +1,6 @@
 <div class="alert alert-danger" role="alert" *ngIf="hayError">
-        {{ mensajeError }}
-    </div>
+    {{ mensajeError }}
+</div>
 <div class="container">
     <div class="row">
 
@@ -14,9 +14,10 @@
                                 [ngClass]="{ 'is-invalid': email.invalid && email.touched, 'is-valid': email.valid}"
                                 [(ngModel)]="usuarioSeleccionado.email" ngbTooltip="Email"
                                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required email>
-                                <div class="invalid-feedback d-block" *ngIf="email.invalid && (email.dirty || email.touched)">
-                                    Email inválido                               
-                                </div>
+                            <div class="invalid-feedback d-block"
+                                *ngIf="email.invalid && (email.dirty || email.touched)">
+                                Email inválido
+                            </div>
                         </div>
                         <div class="row">
                             <div class="form-group btn-block">
@@ -24,7 +25,7 @@
                                     ngbTooltip="Rol de usuario" required>
                                     <option *ngFor="let rol of roles">
                                         {{rol}}
-                                      </option>
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -35,6 +36,12 @@
         </div>
 
         <div class="col">
+            <div class="text-center">
+                <div class="spinner-grow" *ngIf="spinnerBoolean" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
