Mostrar foto de perfil y  prueba de vida correctas

--- a/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
+++ b/src/app/components/pruebas-de-vida/pruebas-de-vida.component.html
@@ -13,11 +13,11 @@
             <div class="row">
                 <div class="col-6">
                     <legend text-center>Foto perfil</legend>
-                    <img src="https://media.istockphoto.com/vectors/man-face-pop-art-cartoon-vector-id892379546" alt="">
+                    <img [src]="imgPerfil" alt="">
                 </div>
                 <div class="col-6">
                     <legend>Prueba de vida</legend>
-                    <img [src]="imgString" alt="">
+                    <img [src]="imgPruebaDeVida" alt="">
                 </div>
             </div>
         </div>
